--- a/04_livrable/website/punr/punr_ch12.html
+++ b/04_livrable/website/punr/punr_ch12.html
@@ -10,6 +10,7 @@
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
       <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
    </head>
+   <div class="STDtop">&lt;</div>
    <body onload="initialise()">
       <header id="top">
          <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
@@ -58,7 +59,7 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e4024"><span id="page_154" class="STDgray STDsmall pb">[154]</span>Temps et description dans le récit d’aujourd’hui<br><span class="STDsmall">(1963)</span></h3>
+            <h3 id="d1e4031"><span id="page_154" class="STDgray STDsmall pb">[154]</span>Temps et description dans le récit d’aujourd’hui<br><span class="STDsmall">(1963)</span></h3>
             <p class="first">La critique est une chose difficile, bien plus que l’art, en un sens. Alors que le
                romancier, par exemple, peut se fier à sa seule sensibilité, sans toujours essayer
                d’en comprendre les choix, et que le simple lecteur se contente de savoir s’il est
@@ -113,7 +114,7 @@
                de constituer le sens de ces descriptions pratiquées aujourd’hui dans le <span id="page_157" class="STDgray STDsmall pb">[157]</span>roman. Une fois de plus, il semble que ce soit bien par référence au passé que l’on
                juge (et condamne) les recherches actuelles.</p>
             <p>Reconnaissons d’abord que la description n’est pas une invention moderne. Le grand
-               roman français du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle en particulier, <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> en tête, regorge de maisons, de mobiliers, de costumes, longuement, minutieusement
+               roman français du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle en particulier, <span class="ref">Balzac<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> en tête, regorge de maisons, de mobiliers, de costumes, longuement, minutieusement
                décrits, sans compter les visages, les corps, etc. Et il est certain que ces descriptions-là
                ont pour but de faire voir et qu’elles y réussissent. Il s’agissait alors le plus
                souvent de planter un décor, de définir le cadre de l’action, de présenter l’apparence
@@ -233,7 +234,7 @@
                le présent de l’indicatif. Film et roman se rencontrent en tout cas, aujourd’hui,
                dans la construction d’instants, d’intervalles et de successions qui n’ont plus rien
                à voir avec ceux des horloges ou du calendrier. Essayons d’en préciser un peu le rôle.</p>
-            <p>On a beaucoup répété, ces dernières années, que le temps était le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;personnage&nbsp;»</span> principal du roman contemporain. Depuis <span class="ref">Proust<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, depuis <span class="ref">Faulkner<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, les retours dans le passé, les ruptures de chronologie, semblent en effet à la base
+            <p>On a beaucoup répété, ces dernières années, que le temps était le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;personnage&nbsp;»</span> principal du roman contemporain. Depuis <span class="ref">Proust<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, depuis <span class="ref">Faulkner<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, les retours dans le passé, les ruptures de chronologie, semblent en effet à la base
                de l’organisation même du récit, de son architecture. Il en serait de même évidemment
                du cinéma&nbsp;: toute œuvre cinématographique moderne serait une réflexion sur la mémoire
                humaine, ses incertitudes, son entêtement, ses drames, etc.</p>
@@ -243,7 +244,7 @@
                au contraire mettre en scène, le plus souvent, des structures mentales privées de
                <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;temps&nbsp;»</span>. Et c’est justement ce qui les rend au premier abord si déroutantes. Je prendrai
                quelques exemples, encore, dans mes propres livres <span id="page_164" class="STDgray STDsmall pb">[164]</span>ou films, dont la grande critique a, sur ce point, presque toujours faussé le sens.</p>
-            <p><span class="STDitalic"><span class="ref">L’Année dernière à Marienbad<span class="refinfo">œuvre, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>,</span> à cause de son titre, à cause aussi des œuvres dont <span class="ref">Alain&nbsp;Resnais<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> avait auparavant réalisé la mise en scène, a d’emblée été interprété comme une de
+            <p><span class="STDitalic"><span class="ref">L’Année dernière à Marienbad<span class="refinfo">œuvre, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>,</span> à cause de son titre, à cause aussi des œuvres dont <span class="ref">Alain&nbsp;Resnais<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> avait auparavant réalisé la mise en scène, a d’emblée été interprété comme une de
                ces variations psychologiques sur l’amour perdu, l’oubli, le souvenir. Les questions
                que l’on se posait le plus volontiers étaient&nbsp;: cet homme et cette femme se sont-ils
                vraiment rencontrés, aimés, l’année dernière à Marienbad&nbsp;? La jeune femme se souvient-elle
