--- a/04_livrable/website/punr/index.html
+++ b/04_livrable/website/punr/index.html
@@ -10,6 +10,7 @@
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
       <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
    </head>
+   <div class="STDtop">&lt;</div>
    <body onload="initialise()">
       <header id="top">
          <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
@@ -51,7 +52,6 @@
       </header>
       <article class="index">
          <section class="intro">intro goes here</section>
-         <div class="separ"></div>
          <section class="index bad">
             <h2>Index des notions adverses</h2>
             <ul>
