--- a/04_livrable/website/punr/punr_ch02.html
+++ b/04_livrable/website/punr/punr_ch02.html
@@ -10,6 +10,7 @@
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
       <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
    </head>
+   <div class="STDtop">&lt;</div>
    <body onload="initialise()">
       <header id="top">
          <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
@@ -65,13 +66,12 @@
                n’ont abouti, au mieux, qu’à des œuvres isolées. Et –&nbsp;on nous le répète&nbsp;–&nbsp;aucune de
                ces œuvres, quel qu’en fût l’intérêt, n’a emporté l’adhésion d’un public comparable
                à celui du roman bourgeois. La seule conception romanesque qui ait cours aujourd’hui
-               est, en fait, celle de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>.</p>
-            <p>Sans mal on pourrait même remonter jusqu’à <span class="ref">madame de La Fayette<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>. La sacro-sainte analyse psychologique constituait, déjà à cette époque, la base
+               est, en fait, celle de <span class="ref">Balzac<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>.</p>
+            <p>Sans mal on pourrait même remonter jusqu’à <span class="ref">madame de La Fayette<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>. La sacro-sainte analyse psychologique constituait, déjà à cette époque, la base
                de toute prose&nbsp;: c’est elle qui présidait à la conception du livre, à la peinture
                des personnages, au déroulement de l’intrigue. Un «&nbsp;bon&nbsp;» roman, depuis lors, est resté l’étude d’une passion&nbsp;–&nbsp;ou d’un conflit de passions,
-               ou d’une absence de passion&nbsp;–&nbsp;dans un milieu <span id="page_17" class="STDgray STDsmall pb">[17]</span>donné. La plupart de nos romanciers contemporains du type traditionnel&nbsp;–&nbsp;c’est-à-dire
-               ceux qui justement recueillent l’approbation des consommateurs&nbsp;–&nbsp;pourraient recopier
-               de longs passages de <span class="STDitalic"><span class="ref">La Princesse de Clèves<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span></span> ou du <span class="STDitalic"><span class="ref">Père Goriot<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span></span> sans éveiller les soupçons du vaste public qui dévore leur production. À peine y
+               ou d’une absence de passion&nbsp;–&nbsp;dans un milieu <span id="page_17" class="STDgray STDsmall pb">[17]</span>donné. <span class="ref">La plupart de nos romanciers contemporains du type traditionnel<span class="refinfo">entite_collective, <span class="Ref3">emprunt non déclaré fortement suggéré</span>, <span class="Axi0">blâme</span>.</span></span>&nbsp;–&nbsp;c’est-à-dire ceux qui justement recueillent l’approbation des consommateurs&nbsp;–&nbsp;pourraient
+               recopier de longs passages de <span class="STDitalic"><span class="ref">La Princesse de Clèves<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span></span> ou du <span class="STDitalic"><span class="ref">Père Goriot<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span></span> sans éveiller les soupçons du vaste public qui dévore leur production. À peine y
                faudrait-il changer quelque tournure, ou briser certaines constructions, donner çà
                et là le ton particulier de chacun au moyen d’un mot, d’une image hardie, d’une chute
                de phrase... Mais tous avouent, sans voir là rien d’anormal, que leurs préoccupations
@@ -105,7 +105,7 @@
                prêts à reconnaître la valeur d’une recherche, restent malgré tout les héritiers d’une
                tradition. Or, inconsciemment jugée par référence aux formes consacrées, une forme
                nouvelle paraîtra toujours plus ou moins une absence de forme. Ne lit-on pas, dans
-               <span class="ref">un de nos plus célèbres dictionnaires encyclopédiques<span class="refinfo">œuvre, <span class="Ref3">emprunt non déclaré fortement suggéré</span>, <span class="Axi0">blâme</span>.</span></span>, à l’article <span class="ref">Schönberg<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi1">indifférent</span>.</span></span>&nbsp;: <span class="quote" onclick="displayExtract('toDefine','1','0',1);">«&nbsp;Auteur d’œuvres audacieuses, sans souci d’aucune règle&nbsp;»</span>&nbsp;! Ce bref jugement se trouve sous la rubrique <span class="STDitalic">Musique</span>, évidemment rédigée par un spécialiste.</p>
+               <span class="ref">un de nos plus célèbres dictionnaires encyclopédiques<span class="refinfo">œuvre, <span class="Ref3">emprunt non déclaré fortement suggéré</span>, <span class="Axi0">blâme</span>.</span></span>, à l’article <span class="ref">Schönberg<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi1">indifférent</span>.</span></span>&nbsp;: <span class="quote" onclick="displayExtract('toDefine','1','0',1);">«&nbsp;Auteur d’œuvres audacieuses, sans souci d’aucune règle&nbsp;»</span>&nbsp;! Ce bref jugement se trouve sous la rubrique <span class="STDitalic">Musique</span>, évidemment rédigée par un spécialiste.</p>
             <p><span id="page_19" class="STDgray STDsmall pb">[19]</span>Le nouveau-né balbutiant sera toujours considéré comme un monstre, même par ceux que
                l’expérience passionne. Il y aura de la curiosité, des mouvements d’intérêt, des réserves
                quant à l’avenir. Parmi les louanges sincères, la plupart s’adresseront aux vestiges
@@ -185,8 +185,7 @@
                façon délibérée&nbsp;–&nbsp;la vérité humaine supérieure qui s’y est exprimée, pour aussitôt
                rejeter cet auxiliaire gênant dans l’oubli, dans les ténèbres.</p>
             <p>Désormais, au contraire, les objets peu à peu perdront leur inconstance et leurs secrets,
-               renonceront à leur faux mystère, à cette intériorité suspecte qu’un essayiste a nommée
-               <span class="quote" onclick="displayExtract('toDefine','0','0',1);">«&nbsp;le cœur romantique des choses&nbsp;»</span>. Celles-ci ne seront plus le vague reflet de l’âme vague du héros, l’image de ses
+               renonceront à leur faux mystère, à cette intériorité suspecte qu’<span class="ref">un essayiste<span class="refinfo">auteur, <span class="Ref3">emprunt non déclaré fortement suggéré</span>, <span class="Axi0">blâme</span>.</span></span> a nommée <span class="quote" onclick="displayExtract('toDefine','0','0',1);">«&nbsp;le cœur romantique des choses&nbsp;»</span>. Celles-ci ne seront plus le vague reflet de l’âme vague du héros, l’image de ses
                tourments, l’ombre de ses désirs. Ou plutôt, s’il arrive encore aux choses de servir
                un instant de support aux passions humaines, ce ne sera que temporairement, et elles
                n’accepteront la tyrannie des significations qu’en apparence –&nbsp;comme par dérision&nbsp;–&nbsp;pour
@@ -224,7 +223,7 @@
                chose n’était en train de changer&nbsp;–&nbsp;et même d’une façon totale, sans doute définitive&nbsp;–&nbsp;dans
                les rapports que nous entretenons avec l’univers. Aussi entrevoyons-nous la réponse
                à cette question pleine d’ironie&nbsp;: «&nbsp;Pourquoi maintenant&nbsp;?&nbsp;» Il y a aujourd’hui, en effet, un élément nouveau, qui nous sépare cette fois radicalement
-               de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>, comme de <span class="ref">Gide<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span> ou de <span class="ref">madame&nbsp;de&nbsp;La&nbsp;Fayette<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>&nbsp;: c’est la destitution des vieux mythes de la «&nbsp;profondeur&nbsp;».</p>
+               de <span class="ref">Balzac<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>, comme de <span class="ref">Gide<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span> ou de <span class="ref">madame&nbsp;de&nbsp;La&nbsp;Fayette<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>&nbsp;: c’est la destitution des vieux mythes de la «&nbsp;profondeur&nbsp;».</p>
             <p>On sait que toute la littérature romanesque reposait sur eux, sur eux seuls. Le rôle
                de l’écrivain consistait traditionnellement à creuser dans la <span class="ref">Nature<span class="refinfo">concept, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>, à l’approfondir, pour atteindre des couches de plus en plus intimes et finir par
                mettre au jour quelque bribe d’un secret troublant. Descendu dans l’abîme des passions
