--- a/04_livrable/website/punr/punr_ch05.html
+++ b/04_livrable/website/punr/punr_ch05.html
@@ -10,6 +10,7 @@
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
       <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
    </head>
+   <div class="STDtop">&lt;</div>
    <body onload="initialise()">
       <header id="top">
          <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
@@ -58,12 +59,12 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e2137"><span id="page_84" class="STDgray STDsmall pb">[84]</span>Éléments d’une anthologie moderne</h3>
+            <h3 id="d1e2144"><span id="page_84" class="STDgray STDsmall pb">[84]</span>Éléments d’une anthologie moderne</h3>
             <p class="first">Les quelques œuvres qui vont être rapidement analysées, ou commentées, dans les pages
                qui suivent sont loin d’être les seules à avoir marqué de leurs recherches la littérature
                de cette première moitié du <span class="STDsc">xx</span><span class="STDexposant">e</span> siècle. Ce ne sont même pas toujours celles qui m’auront personnellement le plus
-               impressionné. On remarquera tout de suite l’absence, entre autres, de <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, et la présence au contraire d’écrivains de bien moindre importance. On ne manquera
-               pas de dire aussi que <span class="ref">Joë&nbsp;Bousquet<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> a des côtés très démodés, et que <span class="STDitalic">Godot</span> est trop à la mode, et que souvent ce ne sont pas les ouvrages les plus accomplis
+               impressionné. On remarquera tout de suite l’absence, entre autres, de <span class="ref">Kafka<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, et la présence au contraire d’écrivains de bien moindre importance. On ne manquera
+               pas de dire aussi que <span class="ref">Joë&nbsp;Bousquet<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> a des côtés très démodés, et que <span class="STDitalic">Godot</span> est trop à la mode, et que souvent ce ne sont pas les ouvrages les plus accomplis
                qui ont été choisis pour représenter les auteurs retenus.</p>
             <p>Tout cela est vrai. C’est que les cinq brefs essais reproduits ici seront pour moi
                surtout des exemples, qui me permettront chacun de préciser quelques thèmes et formes
